NEW:Add functions

--- a/platformio.ini
+++ b/platformio.ini
@@ -18,23 +18,23 @@
 [platformio]
 src_dir      = Marlin
 boards_dir   = buildroot/share/PlatformIO/boards
-default_envs = mega2560
+default_envs = IVI_F4
 
 [common]
 default_src_filter = +<src/*> -<src/config> -<src/HAL> +<src/HAL/shared>
 extra_scripts = pre:buildroot/share/PlatformIO/scripts/common-cxxflags.py
 build_flags = -fmax-errors=5 -g -D__MARLIN_FIRMWARE__ -fmerge-all-constants
 lib_deps =
-  LiquidCrystal
-  TMCStepper@>=0.6.2,<1.0.0
-  Adafruit NeoPixel
-  U8glib-HAL=https://github.com/MarlinFirmware/U8glib-HAL/archive/bugfix.zip
-  Adafruit_MAX31865=https://github.com/adafruit/Adafruit_MAX31865/archive/master.zip
-  LiquidTWI2=https://github.com/lincomatic/LiquidTWI2/archive/master.zip
-  Arduino-L6470=https://github.com/ameyer/Arduino-L6470/archive/0.8.0.zip
-  SailfishLCD=https://github.com/mikeshub/SailfishLCD/archive/master.zip
-  SailfishRGB_LED=https://github.com/mikeshub/SailfishRGB_LED/archive/master.zip
-  SlowSoftI2CMaster=https://github.com/mikeshub/SlowSoftI2CMaster/archive/master.zip
+  #LiquidCrystal
+  #TMCStepper@>=0.6.2,<1.0.0
+  #Adafruit NeoPixel
+  #U8glib-HAL=https://github.com/MarlinFirmware/U8glib-HAL/archive/bugfix.zip
+  #Adafruit_MAX31865=https://github.com/adafruit/Adafruit_MAX31865/archive/master.zip
+  #LiquidTWI2=https://github.com/lincomatic/LiquidTWI2/archive/master.zip
+  #Arduino-L6470=https://github.com/ameyer/Arduino-L6470/archive/0.8.0.zip
+  #SailfishLCD=https://github.com/mikeshub/SailfishLCD/archive/master.zip
+  #SailfishRGB_LED=https://github.com/mikeshub/SailfishRGB_LED/archive/master.zip
+  #SlowSoftI2CMaster=https://github.com/mikeshub/SlowSoftI2CMaster/archive/master.zip
 
 # Globally defined properties
 # inherited by all environments
@@ -410,7 +410,7 @@ monitor_speed     = 115200
 [env:STM32F4]
 platform      = ststm32
 board         = disco_f407vg
-build_flags   = ${common.build_flags} -DUSE_STM32GENERIC -DSTM32GENERIC -DSTM32F4 -DMENU_USB_SERIAL -DMENU_SERIAL=SerialUSB -DHAL_IWDG_MODULE_ENABLED
+build_flags   = ${common.build_flags} -DUSE_STM32GENERIC -DSTM32GENERIC -DSTM32F4 -DMENU_USB_SERIAL -DMENU_SERIAL=SerialUSB -DHAL_IWDG_MODULE_ENABLED -DHAVE_HWSERIAL1
 lib_ignore    = Adafruit NeoPixel, TMCStepper
 src_filter    = ${common.default_src_filter} +<src/HAL/STM32_F4_F7> -<src/HAL/STM32_F4_F7/STM32F7>
 
@@ -851,3 +851,20 @@ build_flags = -c -H -std=gnu++11 -Wall -Os -D__MARLIN_FIRMWARE__
 lib_deps    = ${common.lib_deps}
   TMC26XStepper=https://github.com/trinamic/TMC26XStepper/archive/master.zip
 src_filter  = +<src/Marlin.cpp>
+
+#
+# STM32F4 with STM32GENERIC
+#
+[env:IVI_F4]
+platform      = ststm32
+board         = IVI_F407VG
+build_flags   = ${common.build_flags} 
+                -DUSE_STM32GENERIC -DSTM32GENERIC 
+                -DSTM32F4 -DMENU_USB_SERIAL 
+                -DMENU_SERIAL=SerialUSB 
+                -DHAL_IWDG_MODULE_ENABLED 
+                -DHAVE_HWSERIAL1
+                -DFLASH_PARTITION_MANAGER=1
+                -IMarlin/src/HAL/STM32_F4_F7/STM32F4/STD_DRIVER/inc
+lib_ignore    = Adafruit NeoPixel, TMCStepper
+src_filter    = ${common.default_src_filter} +<src/HAL/STM32_F4_F7> -<src/HAL/STM32_F4_F7/STM32F7>
